--- a/css/custom.css
+++ b/css/custom.css
@@ -1,10 +1,20 @@
 body {
-
+    background-color: #45b8dc;
 }
 .container {
+    display: inline-block;
+    width: 800px;
+    margin-top: 100px;
+    margin-left: calc((100% - 800px) / 2);
 
 }
     .left-column {
+        display: inline-block;
+        width: 40%;
+        float: left;
+        margin-top: 20px;
+        background-color: #1c7fcd;
+
 
     }
         .page-title {
@@ -20,6 +30,10 @@ body {
 
             }
     .right-column {
+        display: inline-block;
+        width: 60%;
+        float: left;
+        background-color: #fff;
 
     }
         .close {
