--- a/css/custom.css
+++ b/css/custom.css
@@ -12,6 +12,7 @@ body {
         display: inline-block;
         width: 40%;
         float: left;
+        padding-bottom: 20px;
         margin-top: 20px;
         background-color: #1c7fcd;
 
@@ -33,6 +34,7 @@ body {
         display: inline-block;
         width: 60%;
         float: left;
+        padding: 60px;
         background-color: #fff;
 
     }
@@ -40,24 +42,61 @@ body {
 
         }
         .form {
+            display: inline-block;
+            width: 100%
 
         }
 
             .form-row {
+                display: inline-block;
+                width: 100%;
+                margin-bottom: 30px;
 
             }
+                .form-row: :last-of-type {
+                    margin-bottom: 0;
+                }
                 .label {
+                    display: inline-block;
+                    width: 100%;
+                    margin-bottom: 5px;
+                    font-size: 18px;
+                    line-height: 15px;
+                    text-transform: uppercase;
+
 
                 }
                 .input {
+                    display: inline-block;
+                    width: 100%;
+                    font-size: 18px;
+                    line-height: 25px;
+
 
                 }
                 .btn {
+                    display: inline-block;
+                    padding: 10px;
+                    padding-left: 40px;
+                    padding-right: 40px;
+                    line-height: 20px;
+                    font-size: 18;
+                    border-radius: 20px;
+                    background-color: #1c7fcd;
+                    color: #fff;
 
                 }
                 .form-row > .text {
+                    display: inline-block;
+                    line-height: 20px;
+                    font-size: 18;
+                    padding: 10px;
 
                 }
                 .form-row > .link {
+                    display: inline-block;
+                    line-height: 20px;
+                    font-size: 18;
+                    padding: 10px;
 
                 }
