--- a/css/custom.css
+++ b/css/custom.css
@@ -1,50 +1,72 @@
 body {
     background-color: #45b8dc;
 }
-.container {
-    display: inline-block;
-    width: 800px;
-    margin-top: 100px;
-    margin-left: calc((100% - 800px) / 2);
-
-}
-    .left-column {
-        display: inline-block;
-        width: 40%;
-        float: left;
-        padding-bottom: 20px;
-        margin-top: 20px;
-        background-color: #1c7fcd;
-
-
+    .background {
+        height: 100vh;
+        background-image: url(https://github.com/front-end-by-rimantas/19-grupe-sign-up/blob/master/img/kalnas.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        filter: blur(20px);
     }
-        .page-title {
+    .container {
+        display: inline-block;
+        width: 800px;
+        position: absolute;
+        /* top: calc((100vh - 460px) / 2);
+        left: calc((100% - 800px) / 2); */
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+        .left-column {
             display: inline-block;
-            width: 100%;
+            width: 40%;
+            padding: 40px;
+            padding-bottom: 20px;
+            background-color: #1c7fcd;
+            background-image: url(https://github.com/front-end-by-rimantas/19-grupe-sign-up/blob/master/img/kalnas.jpg);
+            color: #fff;
+            position: absolute;
+            top: 30px;
+            bottom: 30px;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+        }
+            .page-title {
+                display: inline-block;
+                width: 100%;
+                font-weight: normal;
         }
         .bottom-links {
             display: inline-block;
             width: 100%;
+            position: absolute;
+            bottom: 20px;
+            left: 40px;
+            right: 40px;
         }
         .bottom-links > .link {
             color: #fff;
             }
             .bottom-links > .text {
-
             }
     .right-column {
         display: inline-block;
         width: 60%;
-        float: left;
+        float: right;
         padding: 60px;
         background-color: #fff;
-
+        position: relative;
     }
         .close {
-
-        }
-        .form {
             display: inline-block;
-            width: 100%
-
-        }
+            width: 60%;
+            line-height: 60px;
+            text-align: center;
+            font-size: 30px;
+            position: absolute;
+            top: 0;
+            right: 0;
+    }
