--- a/css/form.css
+++ b/css/form.css
@@ -1,53 +1,51 @@
-.form-row {
+.form {
     display: inline-block;
     width: 100%;
-    margin-bottom: 30px;
+}
+    .form-row {
+        display: inline-block;
+        width: 100%;
+        margin-bottom: 30px;
 
 }
-    .form-row: :last-of-type {
-        margin-bottom: 0;
-    }
-    .label {
-        display: inline-block;
-        width: 100%;
-        margin-bottom: 5px;
-        font-size: 18px;
-        line-height: 15px;
-        text-transform: uppercase;
+        .form-row: :last-of-type {
+            margin-bottom: 0;
+        }
+        .label {
+            display: inline-block;
+            width: 100%;
+            margin-bottom: 5px;
+            font-size: 13px;
+            line-height: 15px;
+            text-transform: uppercase;
 
 
-    }
-    .input {
-        display: inline-block;
-        width: 100%;
-        font-size: 18px;
-        line-height: 25px;
+        }
+        .input {
+            display: inline-block;
+            width: 100%;
+            font-size: 18px;
+            line-height: 25px;
+            border: none;
+            border-bottom: 1px solid #777;
+        }
+        .input:focus {
+            outline: 3px solid #632880;
+        }
+        .form-row > .text {
+            display: inline-block;
+            line-height: 20px;
+            font-size: 18;
+            padding: 10px;
 
-
-    }
-    .btn {
-        display: inline-block;
-        padding: 10px;
-        padding-left: 40px;
-        padding-right: 40px;
-        line-height: 20px;
-        font-size: 18;
-        border-radius: 20px;
-        background-color: #1c7fcd;
-        color: #fff;
-
-    }
-    .form-row > .text {
-        display: inline-block;
-        line-height: 20px;
-        font-size: 18;
-        padding: 10px;
-
-    }
-    .form-row > .link {
-        display: inline-block;
-        line-height: 20px;
-        font-size: 18;
-        padding: 10px;
-
-    }
+        }
+        .form-row > .link {
+            display: inline-block;
+            line-height: 20px;
+            font-size: 18;
+            padding: 10px;
+            color: #632880
+        }
+            .form-row > .link:hover {
+                color: red;
+            }
